# ArduinoCoffeeMachine

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
CoffeeMachine/: CoffeeMachine.ino
CoffeeMachine/libraries/: SSD1306_ascii_display.h  arduino_pid.h  arduino_pin.h  arduino_serial.h  configuration.h  factories.h  ktype_thermocouple.h  tsic_sensor.h
CoffeeMachine/libraries/lib_coffee_machine/: CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
CoffeeMachine/libraries/lib_coffee_machine/.github/workflows/: build.yml
CoffeeMachine/libraries/lib_coffee_machine/docker/: Dockerfile  docker-compose.yml
CoffeeMachine/libraries/lib_coffee_machine/scripts/: test-project.sh
CoffeeMachine/libraries/lib_coffee_machine/src/: CMakeLists.txt
CoffeeMachine/libraries/lib_coffee_machine/src/lib_coffee_machine/: coffee_machine.h  common.h  display.h  mode_detector.h  moving_average.h  serial_interface.h
CoffeeMachine/libraries/lib_coffee_machine/tests/: CMakeLists.txt  common_test.h  test_moving_average.cpp  test_safety_timeouts.cpp  test_serial_interface.cpp  test_temperature_controller.cpp  test_temperature_sensors.cpp
CoffeeMachine/libraries/lib_coffee_machine/tests/mock/: mock_controller.h  mock_display.h  mock_io_pin.h  mock_sensor.h  mock_serial.h  test_adapter.h
GaggiaPIDController/: ArduinoAdapter.h  Common.h  Configuration.h  Display.cpp  Display.h  Factories.h  GaggiaPIDController.ino  KTypeThermocouple.cpp  KTypeThermocouple.h  ModeDetector.h  RelayPIDController.cpp  RelayPIDController.h  Sensors.h  SerialInterface.cpp  SerialInterface.h  TSICTempSensor.cpp  TSICTempSensor.h  TemperatureSensor.cpp  TemperatureSensor.h
GaggiaPIDController/libraries/: ArduinoAdapter.h  ArduinoSerial.h  CMakeLists.txt  CoffeeMachine.h  Common.h  Display.h  Factories.h  Heater.h  ModeDetector.h  RelayPIDController.h  SSD1306AsciiDisplay.h  SSD1306_ascii_display.h  Sensors.h  SerialInterface.h  TemperatureSensor.h  arduino_pid.h  arduino_pin.h  arduino_serial.h  factories.h  ktype_thermocouple.h  tsic_sensor.h
GaggiaPIDController/libraries/coffee_machine/: BaseTypes.h  CoffeeMachine.h  Common.h  Configuration.h  Display.h  RelayPIDController.h  SerialInterface.h  TemperatureSensor.h  coffee_machine.h  common.h  configuration.h  default_configuration.h  display.h  heater.h  interfaces.h  mode_detector.h  moving_average.h  relay_controller.h  serial_interface.h  temperature_sensor.h
docker/: Dockerfile  docker-compose.yml
docs/: conf.py  index.rst
docs/misc/: GaggiaPIDController.fzz
docs/src/: documentation.rst
scripts/: build-docker-image.sh  build-docs.sh  build-project.sh  test-project.sh
src/: Display.h  GaggiaPIDController.ino  RelayPIDController.cpp  RelayPIDController.h  SerialInterface.h  TemperatureSensor.cpp  TemperatureSensor.h
src/libraries/: Common.h
test/: CMakeLists.txt  CommonTest.h  common_test.h  test_moving_average.cpp  test_pid_controller.cpp  test_safety_timeouts.cpp  test_serial_interface.cpp  test_temperature_controller.cpp  test_temperature_sensors.cpp
test/mock/: CppAdapter.h  MockDisplay.h  MockHeater.h  MockModeDetector.h  MockPID.h  MockSerial.h  MockTempSensor.h  mock_controller.h  mock_display.h  mock_io_pin.h  mock_sensor.h  mock_serial.h
tools/: pyproject.toml  temp_plotter.py
