[tool.poetry]
name = "temp_plotter"
version = "0.1.0"
description = "Temperature plotter"
authors = ["Alberto Cardellini"]

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.4"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"